# seabattle

./: README.md  field_info.cpp  field_info.h  game_info.c  game_info.cpp  game_info.h  handler.cpp  handler.h  mainserv  mainserv.cpp  test1.cpp
client/: CMakeLists.txt  client.cpp  field_info.cpp  field_info.h  fill_the_field.cpp  fill_the_field.h  flist.txt  pregame.cpp  pregame.h  progtest.cpp  stage2.cpp  stage2.h  startgame.cpp  startgame.h  testfill.cpp  testfill.h  wordtest.cpp  wordtest.h
mainserv.dSYM/Contents/: Info.plist
mainserv.dSYM/Contents/Resources/DWARF/: mainserv
server/: CMakeLists.txt  field_info.cpp  game_info.h  handler.h
